--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -13,22 +13,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # 1. Checkout do código
     - name: Checkout code
       uses: actions/checkout@v2
 
+    # 2. Configurar .NET Core
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.x'
+        dotnet-version: '6.0.x'  # Certifique-se de que corresponde à versão usada no seu projeto
 
+    # 3. Restaurar dependências
     - name: Restore dependencies
       run: dotnet restore
 
+    # 4. Compilar o projeto
     - name: Build the project
       run: dotnet build --no-restore --configuration Release
 
+    # 5. Executar testes
     - name: Run tests
       run: dotnet test --no-restore --verbosity normal
 
-    - name: Publish build artifacts
-      run: dotnet publish --configuration Release --output ./output
+    # 6. Publicar o aplicativo no Azure
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ./output  # Caminho para os artefatos do build, ajuste conforme necessário
