--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -41,4 +41,4 @@ jobs:
       with:
         app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./output  # Caminho para os artefatos do build, ajuste conforme necessário
+        package: ./bin/Release/net8.0/publish  # Caminho para os artefatos do build, ajuste conforme necessário
