--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -35,10 +35,14 @@ jobs:
     - name: Run tests
       run: dotnet test --no-restore --verbosity normal
 
-    # 6. Publicar o aplicativo no Azure
+    # 6. Publicar o aplicativo
+    - name: Publish the project
+      run: dotnet publish --configuration Release --output ./publish_output
+
+    # 7. Deploy para o Azure Web App
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./bin/Release/net8.0/publish  # Caminho para os artefatos do build, ajuste conforme necessário
+        package: ./publish_output  # Caminho para os artefatos do build
