--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -37,7 +37,7 @@ jobs:
 
     # 6. Publicar o aplicativo
     - name: Publish the project
-      run: dotnet publish ./Jellyfin.Server.Implementations/Jellyfin.Server.Implementations.csproj --configuration Release --output ./publish_output
+      run: dotnet publish ./Jellyfin.Server.Implementations/Jellyfin.Server.Implementations.csproj --configuration Release
 
     # 7. Deploy para o Azure Web App
     - name: Deploy to Azure Web App
@@ -45,4 +45,4 @@ jobs:
       with:
         app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./publish_output
+        package: ./Jellyfin.Server.Implementations/bin/Release/net8.0/publish/
