--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -25,11 +25,11 @@ jobs:
 
     # 3. Restaurar dependências
     - name: Restore dependencies
-      run: dotnet restore ./Jellyfin.Server.Implementations/Jellyfin.Server.Implementations.csproj
+      run: dotnet restore ./Emby.Server.Implementations/Emby.Server.Implementations.csproj
 
     # 4. Compilar o projeto
     - name: Build the project
-      run: dotnet build ./Jellyfin.Server.Implementations/Jellyfin.Server.Implementations.csproj --no-restore --configuration Release
+      run: dotnet build ./Emby.Server.Implementations/Emby.Server.Implementations.csproj --no-restore --configuration Release
 
     # 5. Executar testes
     - name: Run tests
@@ -37,7 +37,7 @@ jobs:
 
     # 6. Publicar o aplicativo
     - name: Publish the project
-      run: dotnet publish ./Jellyfin.Server.Implementations/Jellyfin.Server.Implementations.csproj --configuration Release --output ./publish_output
+      run: dotnet publish ./Emby.Server.Implementations/Emby.Server.Implementations.csproj --configuration Release --output ./publish_output
 
     # 7. Verificar conteúdo da pasta após publicação
     - name: List published files
