--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -1,48 +1,52 @@
-name: Jellyfin CI/CD Pipeline
+name: My Jellyfin CI/CD Pipeline
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout do código
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    # 2. Configurar .NET Core
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'  # Certifique-se de que está usando a versão correta do .NET, conforme o README
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
 
-    # 3. Restaurar dependências
-    - name: Restore dependencies
-      run: dotnet restore ./Jellyfin.Server/Jellyfin.Server.csproj
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
-    # 4. Compilar o projeto Jellyfin.Server
-    - name: Build the project
-      run: dotnet build ./Jellyfin.Server/Jellyfin.Server.csproj --configuration Release
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-    # 5. Publicar o aplicativo
-    - name: Publish the project
-      run: dotnet publish ./Jellyfin.Server/Jellyfin.Server.csproj --configuration Release --output ./publish_output
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
-    # 6. Verificar conteúdo da pasta após publicação
-    - name: List published files
-      run: ls -R ./publish_output
-
-    # 7. Deploy para o Azure Web App
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./publish_output
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'my-jellyfin-app'
+          slot-name: 'Production'
+          package: .
+          publish-profile: ${{ secrets.MY_AZURE_PUBLISH_PROFILE }}
