--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -1,51 +1,57 @@
-name: Jellyfin CI/CD Pipeline
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy ASP.Net Core app to Azure Web App - jellyfin-app
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout do código
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    # 2. Configurar .NET Core
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'  # Atualize para 8.0.x conforme necessário
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
 
-    # 3. Restaurar dependências
-    - name: Restore dependencies
-      run: dotnet restore
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
-    # 4. Compilar o projeto
-    - name: Build the project
-      run: dotnet build --no-restore --configuration Release
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-    # 5. Executar testes
-    - name: Run tests
-      run: dotnet test --no-restore --verbosity normal
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
-    # 6. Publicar o aplicativo  
-    - name: Publish the project
-      run: dotnet publish --configuration Release --output ./publish_output
-
-    # 7. Deploy para o Azure Web App
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'jellyfin-app'  # Substitua pelo nome da sua Web App no Azure
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./publish_output  # Caminho para os artefatos do build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'jellyfin-app'
+          slot-name: 'Production'
+          package: ./publish_output  # Caminho para os artefatos do build
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
   
