--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -22,7 +22,10 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./publish_output
+        run: dotnet publish -c Release --output ./publish_output
+
+      - name: List files after publish
+        run: ls -R ./
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
