--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -1,57 +1,48 @@
-name: Jellyfin-app
+name: Jellyfin CI/CD Pipeline
 
 on:
   push:
     branches:
       - master
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.x'
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+    - name: Restore dependencies
+      run: dotnet restore
 
-      - name: dotnet publish
-        run: dotnet publish ./Jellyfin.Server/Jellyfin.Server.csproj -c Release --output ./publish_output
+    - name: Build the project
+      run: dotnet build --no-restore --configuration Release
 
-      - name: List files after publish
-        run: ls -R ./
+    - name: Run tests
+      run: dotnet test --no-restore --verbosity normal
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: dotnet-app
-          path: ./publish_output
+    - name: Publish build artifacts
+      run: dotnet publish --configuration Release --output ./output
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: dotnet-app
-      
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'jellyfin-app'
-          slot-name: 'Production'
-          package: ./publish_output
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: Build Docker Image
+      run: docker build -t jellyfin-app:latest .
 
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+
+    - name: Push and Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'jellyfin-app'
+        images: 'jellyfin-app:latest'
