--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -52,6 +52,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'NOME_DO_SEU_WEB_APP'
+        app-name: 'jellyfin'
         images: '${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
