--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -21,6 +21,12 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    # Instalar Java 17
+    - name: Set up Java 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+
     # Instalar SonarScanner
     - name: Install SonarScanner
       run: dotnet tool install --global dotnet-sonarscanner
@@ -60,3 +66,11 @@ jobs:
     # Push da imagem Docker para o Docker Hub
     - name: Push Docker Image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest
+
+    # Deploy para o Azure Web App
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'jellyfin'
+        images: '${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
