--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -76,6 +76,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'jellyfin'
+        app-name: 'jellyfin-app'
         images: '${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
