--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -34,10 +34,8 @@ jobs:
 
     # Iniciar a análise do SonarCloud
     - name: SonarCloud Scan - Begin
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}"
 
     # Restaurar dependências
     - name: Restore dependencies
@@ -47,35 +45,10 @@ jobs:
     - name: Run tests
       run: dotnet test --no-restore --verbosity normal
 
-    # Build do projeto e publicação
-    - name: Build and publish
-      run: dotnet publish -c Release -o ./publish
+    # Build do projeto para análise
+    - name: Build project
+      run: dotnet build
 
     # Finalizar a análise do SonarCloud
     - name: SonarCloud Scan - End
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-
-    # Login no Docker Hub
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # Build da imagem Docker
-    - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest .
-
-    # Push da imagem Docker para o Docker Hub
-    - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest
-
-    # Deploy para o Azure Web App
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'jellyfin-app'
-        images: '${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+      run: dotnet-sonarscanner end
