--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -12,19 +12,16 @@ jobs:
 
     steps:
     # Checkout do código do repositório
-    # Esta etapa faz o checkout do código-fonte do repositório para o ambiente de execução do GitHub Actions.
     - name: Checkout code
       uses: actions/checkout@v2
 
     # Configurar .NET Core
-    # Esta etapa configura o ambiente .NET Core 8.0 para garantir que o build e os testes sejam executados corretamente.
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.x'
 
     # Instalar Java 17
-    # SonarScanner requer Java para realizar a análise de código, então esta etapa instala a versão 17 do Java.
     - name: Set up Java 17
       uses: actions/setup-java@v3
       with:
@@ -32,12 +29,10 @@ jobs:
         distribution: 'temurin'
 
     # Instalar SonarScanner
-    # Instala o SonarScanner, uma ferramenta usada para análise de qualidade do código.
     - name: Install SonarScanner
       run: dotnet tool install --global dotnet-sonarscanner
 
     # Iniciar a análise do SonarCloud
-    # Esta etapa inicia a análise do código pelo SonarCloud, passando as credenciais do projeto.
     - name: SonarCloud Scan - Begin
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -45,23 +40,42 @@ jobs:
         dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
     # Restaurar dependências
-    # Esta etapa executa o comando 'dotnet restore' para baixar todas as dependências do projeto, preparando-o para o build.
     - name: Restore dependencies
       run: dotnet restore
 
     # Executar testes automatizados
-    # Esta etapa executa os testes automatizados usando o comando 'dotnet test'.
     - name: Run tests
       run: dotnet test --no-restore --verbosity normal
 
-    # Build do projeto para análise
-    # Esta etapa compila o projeto para verificar a existência de possíveis erros de build.
-    - name: Build project
-      run: dotnet build
+    # Build do projeto e publicação
+    - name: Build and publish
+      run: dotnet publish -c Release -o ./publish
 
     # Finalizar a análise do SonarCloud
-    # Esta etapa finaliza a análise do SonarCloud, gerando os relatórios de qualidade do código.
     - name: SonarCloud Scan - End
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+
+    # Login no Docker Hub
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Build da imagem Docker
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest .
+
+    # Push da imagem Docker para o Docker Hub
+    - name: Push Docker Image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest
+
+    # Deploy para o Azure Web App
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'jellyfin-app'
+        images: '${{ secrets.DOCKER_USERNAME }}/jellyfin-app:latest'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
