--- a/.github/workflows/jellyfin-ci.yml
+++ b/.github/workflows/jellyfin-ci.yml
@@ -15,25 +15,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Configurar Node.js para construir o web client
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20.x'
-
-    # Construir o web client a partir do código-fonte
-    - name: Build Web Client from Source
+    # Baixar arquivos do web client pré-compilados
+    - name: Download Web Client
       run: |
-        # Clonar o repositório
-        git clone https://github.com/jellyfin/jellyfin-web.git
-        cd jellyfin-web
-        # Instalar dependências (necessita Node.js e npm)
-        npm install
-        # Construir os arquivos do web client
-        npm run build
-        # Copiar os arquivos para a pasta de saída desejada
-        mkdir -p ../jellyfin-web-dist
-        cp -r dist/* ../jellyfin-web-dist
+        mkdir -p ./jellyfin-web-dist
+        curl -L https://link-para-arquivos-precompilados.zip -o jellyfin-web.zip
+        unzip jellyfin-web.zip -d ./jellyfin-web-dist
 
     # Configurar .NET Core
     - name: Set up .NET Core
